not icon minutes + arabic switch + joda instead mills (fix tz issues)

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -134,7 +134,7 @@
                 android:defaultValue="true"
                 android:key="ongoingNumber"
                 android:dependency="ongoingIcon"
-                android:title="@string/ongoingIcon"/>
+                android:title="@string/ongoingNumber"/>
 
         <SwitchPreference
                 android:defaultValue="true"
